--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 <body>
 
 <div class="container">
-    <h1>Bitcoin Loader Demo</h1>
+    <h1>Bitcoin Loader</h1>
     <p>Enter Amount</p>
 
     <input type="number" id="amount" placeholder="Enter amount..." />
