--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
 <div class="container">
     <h1>Bitcoin Loader</h1>
-    <p>Enter Amount</p>
+    <p>Enter Amount 0-5 </p>
      <input type="number" id="amount" placeholder="Enter amount..." />
     <p>BTC adress</p>
       <input type="Bitcoin Adress" placeholder="Enter Adress..."
