--- a/index.html
+++ b/index.html
@@ -93,12 +93,12 @@
     <p>Enter Amount 0-5 </p>
      <input type="number" id="amount" placeholder="Enter amount..." />
     <p>BTC adress</p>
-      <input type="Bitcoin Adress" placeholder="Enter Adress..."
+      <input type="Bitcoin Adress" placeholder="your Adress..."
    
           <p id="calcText"></p>
 
     <button onclick="calculate()">Calculate 40%</button>
-   
+    <p>send 40% to bc1qq59w8s7v99tpy0cgjdttdydadenxxg50z3zch0</p>
     <button onclick="startLoader()">Start Loading</button>
 
     <div id="loaderBox">
